--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "restomod-client-3",
-  "version": "0.1.0",
+  "name": "restomod-client",
+  "version": "0.5.11",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
